# aegnux

./: .gitignore  CHANGELOG.md  LEGAL_NOTICE.md  README.md  ROADMAP.md  main.py  prepare.sh  pyproject.toml  run.sh
.github/workflows/: ci-cd.yml  pytest.yml
assets/: dxvk.reg  fontsmooth.reg
docs/: PROJECT_STATUS.md  TESTING_AND_DEPLOYMENT.md  TESTING_GUIDE.md
examples/plugins/: README.md
examples/plugins/autosave/: plugin.py
examples/plugins/dxvk_manager/: plugin.py
examples/plugins/example_plugin/: README.md  plugin.py
examples/plugins/license_info/: README.md  plugin.py
examples/plugins/prefix_backup/: plugin.py
examples/plugins/system_info/: plugin.py
examples/plugins/template/: plugin.py
examples/plugins/test_plugin/: plugin.py
examples/plugins/wine_manager/: README.md  (+1 more)
src/: aetypes.py  app.py  codecs_importer.py  codecs_importer_thread.py  config.py  installationthread.py  killaethread.py  mainwindow.py  mainwindow_with_plugins.py  pluginthread.py  processthread.py  removeaethread.py  runaethread.py  runexethread.py  types.py  utils.py
src/dialogs/: codecs_options_dialog.py  plugin_manager_dialog.py
src/plugins/: __init__.py  base.py  exceptions.py  manager.py
src/utils/: archives.py  processes.py
styles/: mainwindow.css  wine_dark_theme.reg
tests/: test_cancel_import.py  test_codecs_importer.py  test_install_and_cancel.py  test_install_prefix.py  test_plugin_dependencies.py  test_plugin_events.py  test_plugins.py  test_plugins_events.py
translations/: __init__.py  en_US.py  helper.py  ru_RU.py  uk_UA.py
ui/: mainwindow.py
(+546 files in other folders)
