[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegnux"
version = "0.1.0-alpha"
description = "Adobe After Effects для Linux"
readme = "README.md"
authors = [{name = "Patt1one"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
keywords = ["after effects", "linux", "video editing"]
dependencies = [
    "PySide6",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "mypy",
    "black",
]

[project.urls]
Homepage = "https://github.com/Patt1one/aegnux"
Repository = "https://github.com/Patt1one/aegnux.git"
"Bug Tracker" = "https://github.com/Patt1one/aegnux/issues"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=xml"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'